--- a/main.scss
+++ b/main.scss
@@ -26,62 +26,54 @@ nav {
 	flex-direction: column;
 	justify-content: center;
 	font-size: 2rem;
+  &::before {
+    content: "menu";
+    position: absolute;
+    top: 50%;
+    left: -50%;
+    z-index: 2;
+    transform: rotate(-90deg) translateY(100%);
+    transition: all 400ms ease-in;
+    font-size: 2rem;
+  }
+  button {
+    padding: 0;
+    border: 0;
+    position: absolute;
+    height: 50%;
+    width: 25vh;
+    background: orange;
+    left: -25vh;
+    top: 25%;
+    border-radius: 25vh 0 0 25vh;
+    transform: scaleY(2) scaleX(0.2) translateX(200%);
+    transition: all 400ms ease-in;
+    outline: none;
+  }
+  &.min {
+    transform: translateX(100%);
+    &::before {
+      transform: rotate(0deg) translateY(-50%);
+    }
+    button {
+      transform: scaleY(1) scaleX(1) translateX(0%);
+    }
+  }
+  li {
+    list-style: none;
+    padding: 5vh 10px;
+    color: black;
+    &:nth-of-type(1):hover {background: blue;}
+    &:nth-of-type(2):hover {background: green;}
+    &:nth-of-type(3):hover {background: red;}
+  }
+  &:hover {
+    background: pink;
+    button {
+      background: pink;
+    }
+  }
 }
-
-nav::before {
-	content: "menu";
-	position: absolute;
-	top: 50%;
-	left: -50%;
-	z-index: 2;
-	transform: rotate(-90deg) translateY(100%);
-	transition: all 400ms ease-in;
-	font-size: 2rem;
-}
-
-nav.min {
-	transform: translateX(100%);
-}
-
-nav.min::before {
-	transform: rotate(0deg) translateY(-50%);
-}
-
-nav.min button {
-	transform: scaleY(1) scaleX(1) translateX(0%);
-}
-
-nav button {
-	padding: 0;
-	border: 0;
-	position: absolute;
-	height: 50%;
-	width: 25vh;
-	background: orange;
-	left: -25vh;
-	top: 25%;
-	border-radius: 25vh 0 0 25vh;
-	transform: scaleY(2) scaleX(0.2) translateX(200%);
-	transition: all 400ms ease-in;
-	outline: none;
-}
-
-nav:hover button {
-	background: pink;
-}
-nav:hover {
-	background: pink;
-}
-
-nav li {
-	list-style: none;
-	padding: 5vh 10px;
-	color: black;
-}
-
-nav li:nth-of-type(1):hover {background: blue;}
-nav li:nth-of-type(2):hover {background: green;}
-nav li:nth-of-type(3):hover {background: red;}
 
 /*====================HERO====================*/
 
