--- a/main.scss
+++ b/main.scss
@@ -79,7 +79,10 @@ nav {
 
 #hero {
 	margin: 0 auto;
-	width: 98%;
+  width: 98%;
+  position: sticky;
+  top: 0;
+  z-index: -1;
 	* {
 		margin: 0;
 	}
