--- a/main.scss
+++ b/main.scss
@@ -107,11 +107,16 @@ nav {
 #head {
   position: fixed;
   top: 0;
-  left: 2%;
+	left: 2%;
+	transform: translateY(-100%);
+	transition: transform 380ms ease-in;
   h1 {
     margin: 0 auto;
     font-size: calc(var(--hero-height) * 0.25);
-  }
+	}
+	&.show {
+		transform: translateY(0%);
+	}
 }
 
 
