Change nav width to min-width

--- a/main.scss
+++ b/main.scss
@@ -19,7 +19,7 @@ nav {
 	top: 0;
 	right: 0;
 	background: orange;
-	width: 30%;
+	min-width: 30%;
 	height: 100vh;
 	transition: all 400ms ease-in;
 	display: flex;
