--- a/main.scss
+++ b/main.scss
@@ -26,6 +26,7 @@ nav {
 	flex-direction: column;
 	justify-content: center;
 	font-size: 2rem;
+	z-index: 1000;
   button {
     padding: 0;
     border: 0;
