--- a/main.scss
+++ b/main.scss
@@ -42,6 +42,19 @@ nav {
     outline: none;
 		font-family: inherit;
 		font-size: calc(var(--hero-height) * 0.25);
+		&::before {
+			content: "";
+			position: absolute;
+			width: 25vw;
+			height: 12.5vw;
+			top: 0;
+			left: 0;
+			background-color: orange;
+			z-index: -1;
+			border-radius: 25vw 25vw 0 0;
+			transform: scaleX(3);
+			transition: all 400ms ease-in;
+		}
   }
   &.min {
     transform: translateX(100%);
