--- a/main.scss
+++ b/main.scss
@@ -42,6 +42,7 @@ nav {
     outline: none;
 		font-family: inherit;
 		font-size: calc(var(--hero-height) * 0.25);
+		cursor: pointer;
 		&::before {
 			content: "";
 			position: absolute;
@@ -72,13 +73,14 @@ nav {
     list-style: none;
     padding: 5vh 10px;
     color: black;
+		cursor: pointer;
     &:nth-of-type(1):hover {background: blue;}
     &:nth-of-type(2):hover {background: green;}
     &:nth-of-type(3):hover {background: red;}
   }
   &:hover {
     background: pink;
-    button {
+    button, button::before {
       background: pink;
     }
   }
