--- a/main.scss
+++ b/main.scss
@@ -130,6 +130,7 @@ nav {
 	left: 2%;
 	transform: translateY(-100%);
 	transition: transform 380ms ease-in;
+	z-index: 1000;
 	h1 {
 		margin: 0 auto;
 		font-size: calc(var(--hero-height) * 0.25);
