Swap styles from p to content wrapper

--- a/main.scss
+++ b/main.scss
@@ -152,14 +152,12 @@ section {
 		padding: 8px;
 		transform: skewY(-8deg);
 	}
-	p {
-		width: 80%;
+	div {
+		background: white;
+		border: $border;
+		border-top: none;
 		margin: 0 auto;
 		padding: 1rem 5%;
-		background: white;
-		border-left: $border;
-		border-right: $border;
-		&:first-of-type {border-top: $border;}
-		&:last-of-type {border-bottom: $border;}
+		overflow: hidden;
 	}
 }
