--- a/main.scss
+++ b/main.scss
@@ -140,17 +140,18 @@ section {
 	min-height: 80vh;
 	width: 80%;
 	margin: 0 auto;
+	position: relative;
+	overflow: hidden;
 	h2 {
 		font-size: 3rem;
-		margin-left: -8px;
-		margin-bottom: -8px;
+		margin: 0;
 		text-transform: uppercase;
 		background: white;
-		display: inline-block;
-		position: relative;
 		border: $border;
-		padding: 8px;
-		transform: skewY(-8deg);
+		padding: 8px 5%;
+		overflow: hidden;
+		position: relative;
+		z-index: 1;
 	}
 	div {
 		background: white;
