--- a/main.scss
+++ b/main.scss
@@ -13,6 +13,15 @@ body {
 
 $border: 8px solid black;
 
+@mixin pseudo() {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+}
+
 /*=====================NAV=====================*/
 
 nav {
