--- a/main.scss
+++ b/main.scss
@@ -37,9 +37,10 @@ nav {
 	justify-content: center;
 	font-size: 2rem;
 	z-index: 1000;
+	border-left: $border;
 	button {
 		padding: 0;
-		border: 0;
+		border: none;
 		position: absolute;
 		width: 25vw;
 		height: 12.5vw;
@@ -65,7 +66,17 @@ nav {
 			border-radius: 25vw 25vw 0 0;
 			transform: scaleX(3);
 			transition: all 400ms ease-in;
+			border-top: $border;
+			border-left: $border;
+			border-right: $border;
+			border-bottom: none;
+			border-color: orange;
 		}
+		&:focus {
+			&::before {
+				border-color: black;
+		}
+	}
 	}
 	&.min {
 		transform: translateX(100%);
@@ -88,10 +99,9 @@ nav {
 		&:nth-of-type(2):hover {background: green;}
 		&:nth-of-type(3):hover {background: red;}
 	}
-	&:hover {
-		background: pink;
-		button, button::before {
-			background: pink;
+	&:hover, &:focus-within {
+		button::before {
+			border-color: black;
 		}
 	}
 }
