--- a/main.scss
+++ b/main.scss
@@ -55,12 +55,9 @@ nav {
 		font-size: calc(var(--hero-height) * 0.25);
 		cursor: pointer;
 		&::before {
-			content: "";
-			position: absolute;
-			width: 25vw;
-			height: 12.5vw;
-			top: 0;
-			left: 0;
+			@include pseudo();
+			top: -9px;
+			left: -10px;
 			background-color: orange;
 			z-index: -1;
 			border-radius: 25vw 25vw 0 0;
@@ -80,9 +77,6 @@ nav {
 	}
 	&.min {
 		transform: translateX(100%);
-		&::before {
-			transform: rotate(0deg) translateY(-50%);
-		}
 		button {
 			transform: translateX(-75%) rotate(-90deg);
 			&::before {
