--- a/main.scss
+++ b/main.scss
@@ -22,6 +22,10 @@ $border: 8px solid black;
 	width: 100%;
 }
 
+a {
+	transition: box-shadow 270ms ease-in;
+}
+
 /*=====================NAV=====================*/
 
 nav {
