--- a/main.scss
+++ b/main.scss
@@ -41,8 +41,8 @@ nav {
 		padding: 0;
 		border: none;
 		position: absolute;
-		width: 25vw;
-		height: 12.5vw;
+		width: 25vh;
+		height: 12.5vh;
 		background: orange;
 		left: 0;
 		border-radius: 25vw 25vw 0 0;
