--- a/main.scss
+++ b/main.scss
@@ -146,7 +146,7 @@ nav {
 section {
 	min-height: 80vh;
 	width: 80%;
-	margin: 0 auto;
+	margin: 10vh auto;
 	overflow: hidden;
 	h2 {
 		font-size: 3rem;
