Add nav::before shadow element

--- a/main.scss
+++ b/main.scss
@@ -37,6 +37,15 @@ nav {
 	font-size: 2rem;
 	z-index: 1000;
 	border-left: $border;
+	&::before {
+		@include pseudo();
+		// Shadow over page to extend click listener
+		width: 100vw;
+		left: -100vw;
+		opacity: 0.2;
+		background-color: black;
+		transition: opacity var(--nav-transition-time) ease-out;
+	}
 	button {
 		padding: 0;
 		border: none;
@@ -76,6 +85,11 @@ nav {
 	}
 	&.min {
 		transform: translateX(100%);
+		&::before {
+			// Hide & minimize shadow
+			transform: scaleX(0);
+			opacity: 0;
+		}
 		button {
 			transform: translateX(-75%) rotate(-90deg);
 			&::before {
