Move aside styling to section, reshape and modify shape-outside

--- a/main.scss
+++ b/main.scss
@@ -202,7 +202,27 @@ section {
 		position: relative;
 		z-index: 1;
 	}
-	div {
+	aside {
+		// Aside illustrations for sections
+		height: 200px;
+		width: 200px;
+		border: $border;
+		background-color: orange;
+		overflow: hidden;
+		// Smaller at mobile size
+		@media(max-width: 500px){
+			height: 150px;
+			width: 150px;
+		}
+		// Add filters to blend images into orangeyness
+		img {
+			height: auto;
+			width: 100%;
+			transform: scale(1.5);
+			filter: grayscale(0.6) brightness(2) contrast(1);
+			mix-blend-mode: multiply;
+		}
+	> div {
 		background: white;
 		border: $border;
 		border-top: none;
@@ -220,24 +240,16 @@ section {
 }
 
 // ABOUT
-.picture {
-	height: 200px;
-	width: 200px;
-	border: $border;
-	border-radius: 50%;
-	background-color: cornsilk;
-	float: right;
-	-webkit-shape-outside: circle();
-	shape-outside: circle();
-	position: relative;
-	overflow: hidden;
-	margin-bottom: 8px;
-	margin-left: 8px;
-	margin-right: -2rem;
-	img {
-		height: auto;
-		width: 100%;
-		filter: grayscale(0.6) brightness(2) contrast(1);
-		mix-blend-mode: multiply;
+#about {
+	aside {
+		// Push aside into top right corner
+		float: right;
+		margin: calc(0px - var(--section-padding) - 8px) calc(0px - var(--section-padding) - 8px) 0px 0px;
+		// Polygon to dictate text hyphenating
+		shape-outside: polygon(0% 0%, 100% 100%, 50% 100%, 15% 81%, 0% 50%);
+		border-radius: 0 0 0 50%;
+	}
+}
+
 	}
 }
