--- a/main.scss
+++ b/main.scss
@@ -1,9 +1,14 @@
 body {
-	font-family: 'Major Mono Display', monospace;
+	font-family: 'PT Mono', monospace;
 	background: cornsilk;
 	min-height: 100vh;
 	overflow-x: hidden;
 	margin: 0;
+}
+
+h1,h2,h3,h4,h4 {
+	text-transform: uppercase;
+	font-family: 'Major Mono Display', monospace;
 }
 
 .red {color: red;}
