--- a/main.scss
+++ b/main.scss
@@ -6,7 +6,7 @@ body {
 	margin: 0;
 }
 
-h1,h2,h3,h4,h4 {
+h1,h2,h3,h4,h4,.display {
 	text-transform: uppercase;
 	font-family: 'Major Mono Display', monospace;
 }
