--- a/main.scss
+++ b/main.scss
@@ -391,5 +391,26 @@ section {
 			padding: var(--section-padding);
 		}
 	}
+	
+	&:nth-of-type(3) {
+		padding: 0;
+		display: flex;
+		flex-direction: row-reverse;
+		.col-r {
+			padding: var(--section-padding);
+			border-right: $border;
+			@media(max-width: $mobile) {
+				border-right: none;
+				padding-bottom: 0;
+			}
+		}
+		.col-l {
+			padding: var(--section-padding);
+		}
+	}
+
+	@media(max-width: $mobile) {
+		flex-direction: column;
+	}
 }
 }
