--- a/main.scss
+++ b/main.scss
@@ -376,7 +376,7 @@ section {
 		}
 	}
 
-	&:nth-of-type(1) {
+	&:nth-of-type(4n+1) {
 		padding: 0;
 		display: flex;
 		.col-l {
@@ -392,7 +392,7 @@ section {
 		}
 	}
 	
-	&:nth-of-type(3) {
+	&:nth-of-type(4n+3) {
 		padding: 0;
 		display: flex;
 		flex-direction: row-reverse;
