--- a/main.scss
+++ b/main.scss
@@ -294,6 +294,9 @@ section {
 				margin-top: 7rem;
 			}
 		}
+		@media(max-width: $mobile) {
+			padding-bottom: var(--section-padding);
+		}
 	}
 }
 
