--- a/main.css
+++ b/main.css
@@ -1,137 +1,14 @@
 body {
-  font-family: 'Major Mono Display', monospace;
+  font-family: 'PT Mono', monospace;
   background: cornsilk;
   min-height: 100vh;
   overflow-x: hidden;
   margin: 0;
 }
 
-section {
-  min-height: 80vh;
-  width: 80%;
-  margin: 0 auto;
-}
-
-/*=====================NAV=====================*/
-nav {
-  position: fixed;
-  top: 0;
-  right: 0;
-  background: orange;
-  width: 30%;
-  height: 100vh;
-  -webkit-transition: all 400ms ease-in;
-  transition: all 400ms ease-in;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-size: 2rem;
-}
-
-nav::before {
-  content: "menu";
-  position: absolute;
-  top: 50%;
-  left: -50%;
-  z-index: 2;
-  -webkit-transform: rotate(-90deg) translateY(100%);
-          transform: rotate(-90deg) translateY(100%);
-  -webkit-transition: all 400ms ease-in;
-  transition: all 400ms ease-in;
-  font-size: 2rem;
-}
-
-nav.min {
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-}
-
-nav.min::before {
-  -webkit-transform: rotate(0deg) translateY(-50%);
-          transform: rotate(0deg) translateY(-50%);
-}
-
-nav.min button {
-  -webkit-transform: scaleY(1) scaleX(1) translateX(0%);
-          transform: scaleY(1) scaleX(1) translateX(0%);
-}
-
-nav button {
-  padding: 0;
-  border: 0;
-  position: absolute;
-  height: 50%;
-  width: 25vh;
-  background: orange;
-  left: -25vh;
-  top: 25%;
-  border-radius: 25vh 0 0 25vh;
-  -webkit-transform: scaleY(2) scaleX(0.2) translateX(200%);
-          transform: scaleY(2) scaleX(0.2) translateX(200%);
-  -webkit-transition: all 400ms ease-in;
-  transition: all 400ms ease-in;
-  outline: none;
-}
-
-nav:hover button {
-  background: pink;
-}
-
-nav:hover {
-  background: pink;
-}
-
-nav li {
-  list-style: none;
-  padding: 5vh 10px;
-  color: black;
-}
-
-nav li:nth-of-type(1):hover {
-  background: blue;
-}
-
-nav li:nth-of-type(2):hover {
-  background: green;
-}
-
-nav li:nth-of-type(3):hover {
-  background: red;
-}
-
-/*====================HERO====================*/
-#hero {
-  margin: 0 auto;
-  width: 98%;
-}
-
-#hero * {
-  margin: 0;
-}
-
-#hero h1 {
-  font-size: 14vw;
-}
-
-#hero p {
-  font-size: 1.2rem;
-}
-
-#hero .char {
-  display: inline-block;
-  -webkit-animation-duration: 2270ms;
-          animation-duration: 2270ms;
-  -webkit-animation-timing-function: ease-in;
-          animation-timing-function: ease-in;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
+h1, h2, h3, h4, h4, .display {
+  text-transform: uppercase;
+  font-family: 'Major Mono Display', monospace;
 }
 
 .red {
@@ -150,79 +27,539 @@ nav li:nth-of-type(3):hover {
   color: yellow;
 }
 
-.skewPlus {
-  -webkit-animation-name: key-skewPlus;
-          animation-name: key-skewPlus;
+/*=====================NAV=====================*/
+:root {
+  --nav-transition-time: 400ms;
 }
 
-.skewMinus {
-  -webkit-animation-name: key-skewMinus;
-          animation-name: key-skewMinus;
+nav {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  background: orange;
+  height: 100vh;
+  -webkit-transition: -webkit-transform var(--nav-transition-time) ease-in;
+  transition: -webkit-transform var(--nav-transition-time) ease-in;
+  transition: transform var(--nav-transition-time) ease-in;
+  transition: transform var(--nav-transition-time) ease-in, -webkit-transform var(--nav-transition-time) ease-in;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 2rem;
+  border-left: 8px solid black;
 }
 
-.rotatePlus {
-  -webkit-animation-name: key-rotatePlus;
-          animation-name: key-rotatePlus;
+nav::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  width: 100vw;
+  left: -100vw;
+  opacity: 0.2;
+  background-color: black;
+  -webkit-transition: opacity var(--nav-transition-time) ease-out;
+  transition: opacity var(--nav-transition-time) ease-out;
 }
 
-.rotateMinus {
-  -webkit-animation-name: key-rotateMinus;
-          animation-name: key-rotateMinus;
+nav button {
+  padding: 0;
+  border: none;
+  font-family: inherit;
+  width: 25vh;
+  height: 12.5vh;
+  background: orange;
+  border-radius: 25vh 25vh 0 0;
+  -webkit-transform-origin: center;
+          transform-origin: center;
+  position: absolute;
+  left: 0;
+  -webkit-transform: translateX(calc(-75% + 5px)) rotate(-90deg);
+          transform: translateX(calc(-75% + 5px)) rotate(-90deg);
+  font-size: 2rem;
+  cursor: pointer;
 }
 
-@-webkit-keyframes key-skewPlus {
-  to {
-    -webkit-transform: skewX(8deg);
-            transform: skewX(8deg);
+nav button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: orange;
+  z-index: -1;
+  border-radius: 25vw 25vw 0 0;
+  -webkit-transform: scaleX(4.01);
+          transform: scaleX(4.01);
+  -webkit-transition: all var(--nav-transition-time) ease-in;
+  transition: all var(--nav-transition-time) ease-in;
+  border: 8px solid black;
+  border-bottom: none;
+  border-color: orange;
+  top: -8px;
+  left: -8px;
+}
+
+@media (max-width: 500px) {
+  nav button::before {
+    border-color: black;
   }
 }
 
-@keyframes key-skewPlus {
-  to {
-    -webkit-transform: skewX(8deg);
-            transform: skewX(8deg);
+nav.min {
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+}
+
+nav.min::before {
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  opacity: 0;
+}
+
+nav.min button {
+  -webkit-transform: translateX(-75%) rotate(-90deg);
+          transform: translateX(-75%) rotate(-90deg);
+}
+
+nav.min button::before {
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
+}
+
+nav a {
+  padding: 5vh 10px;
+  margin-left: 10px;
+}
+
+nav:hover button::before, nav:focus-within button::before {
+  border-color: black;
+}
+
+/*====================HERO====================*/
+:root {
+  --hero-height: 14vw;
+}
+
+@media (max-width: 500px) {
+  :root {
+    --hero-height: 20vw;
   }
 }
 
-@-webkit-keyframes key-skewMinus {
-  to {
-    -webkit-transform: skewX(-10deg);
-            transform: skewX(-10deg);
+#hero {
+  margin: 0 auto;
+  width: 98%;
+  min-height: 100vh;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+#hero * {
+  margin: 0;
+}
+
+#hero h1 {
+  font-size: var(--hero-height);
+}
+
+#hero .char {
+  display: inline-block;
+}
+
+/*====================HEAD====================*/
+#head {
+  position: fixed;
+  top: 2%;
+  left: 2%;
+  z-index: 1000;
+  -webkit-transform: translateY(-120%);
+          transform: translateY(-120%);
+  -webkit-transition: -webkit-transform 380ms ease-in;
+  transition: -webkit-transform 380ms ease-in;
+  transition: transform 380ms ease-in;
+  transition: transform 380ms ease-in, -webkit-transform 380ms ease-in;
+}
+
+#head h1 {
+  margin: 0;
+  font-size: 2rem;
+}
+
+#head.show {
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
+}
+
+/*==================SECTION==================*/
+:root {
+  --section-padding: 2rem;
+}
+
+section {
+  max-width: 900px;
+  margin: 10vh auto;
+  overflow: hidden;
+}
+
+section h2 {
+  font-size: 3rem;
+  margin: 0;
+  text-transform: uppercase;
+  background: white;
+  border: 8px solid black;
+  padding: 8px var(--section-padding);
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
+
+section aside {
+  height: 200px;
+  width: 200px;
+  border: 8px solid black;
+  background-color: orange;
+  overflow: hidden;
+}
+
+section aside.aside--left {
+  float: left;
+  margin: calc(0px - var(--section-padding) - 8px) 0px 0px calc(0px - var(--section-padding) - 8px);
+  shape-outside: polygon(100% 0%, 0% 100%, 50% 100%, 83% 82%, 100% 50%);
+  border-radius: 0 0 50% 0;
+}
+
+section aside.aside--right {
+  float: right;
+  margin: calc(0px - var(--section-padding) - 8px) calc(0px - var(--section-padding) - 8px) 0px 0px;
+  shape-outside: polygon(0% 0%, 100% 100%, 50% 100%, 15% 81%, 0% 50%);
+  border-radius: 0 0 0 50%;
+}
+
+@media (max-width: 500px) {
+  section aside {
+    height: 150px;
+    width: 150px;
   }
 }
 
-@keyframes key-skewMinus {
-  to {
-    -webkit-transform: skewX(-10deg);
-            transform: skewX(-10deg);
+section aside img {
+  -webkit-filter: grayscale(0.6) brightness(2);
+          filter: grayscale(0.6) brightness(2);
+  mix-blend-mode: multiply;
+  height: auto;
+  width: 100%;
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+}
+
+section aside svg {
+  margin-left: 10px;
+  height: 90%;
+  width: auto;
+  overflow: unset;
+}
+
+section .section-container {
+  background: white;
+  border: 8px solid black;
+  border-top: none;
+  margin: 0 auto;
+  padding: var(--section-padding);
+}
+
+section .section-container p:first-of-type {
+  margin-top: 0;
+}
+
+section .section-container p:last-of-type {
+  margin-bottom: 0;
+}
+
+@media (max-width: 500px) {
+  section {
+    max-width: 90%;
   }
 }
 
-@-webkit-keyframes key-rotatePlus {
-  to {
-    -webkit-transform: skewX(3deg);
-            transform: skewX(3deg);
+#about .section-container p:first-of-type {
+  -webkit-hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto;
+}
+
+#contact .section-container {
+  padding-bottom: 15vh;
+}
+
+@media (max-width: 500px) {
+  #contact .section-container p:first-of-type {
+    margin-top: 7rem;
   }
 }
 
-@keyframes key-rotatePlus {
-  to {
-    -webkit-transform: skewX(3deg);
-            transform: skewX(3deg);
+@media (max-width: 500px) {
+  #contact .section-container {
+    padding-bottom: var(--section-padding);
   }
 }
 
-@-webkit-keyframes key-rotateMinus {
-  to {
-    -webkit-transform: skewX(-5deg);
-            transform: skewX(-5deg);
+.ghost__body-top, .ghost__body-low, .ghost__tail {
+  fill: white;
+}
+
+.ghost__eye {
+  fill: none;
+  stroke: black;
+  stroke-width: 5;
+}
+
+.ghost__shadow {
+  fill: black;
+  stroke: none;
+}
+
+#portfolio .section-container {
+  padding: 0;
+}
+
+#portfolio .button-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(140px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  grid-gap: 8px;
+  background-color: black;
+}
+
+#portfolio .button-grid button {
+  border: none;
+  text-align: center;
+  padding: 1em 0;
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+
+#portfolio .button-grid button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: orange;
+  z-index: -1;
+  -webkit-transform: skewX(-40deg) scaleX(0);
+          transform: skewX(-40deg) scaleX(0);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+  width: 200%;
+  left: -25%;
+  -webkit-transition: -webkit-transform 320ms ease-in;
+  transition: -webkit-transform 320ms ease-in;
+  transition: transform 320ms ease-in;
+  transition: transform 320ms ease-in, -webkit-transform 320ms ease-in;
+}
+
+#portfolio .button-grid button:hover::before {
+  -webkit-transform: skewX(-40deg) scaleX(1);
+          transform: skewX(-40deg) scaleX(1);
+  -webkit-transform-origin: left;
+          transform-origin: left;
+}
+
+.portfolio-entry {
+  padding: var(--section-padding);
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+  border-top: 8px solid black;
+}
+
+.portfolio-entry .portfolio-entry__img {
+  -webkit-filter: grayscale(0.6) brightness(2);
+          filter: grayscale(0.6) brightness(2);
+  mix-blend-mode: multiply;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.2;
+  width: 100%;
+  height: auto;
+  z-index: -1;
+}
+
+@media (max-width: 500px) {
+  .portfolio-entry .portfolio-entry__img {
+    height: 100%;
+    width: auto;
+    left: -50%;
   }
 }
 
-@keyframes key-rotateMinus {
-  to {
-    -webkit-transform: skewX(-5deg);
-            transform: skewX(-5deg);
+.portfolio-entry .portfolio-entry__title {
+  font-size: 2rem;
+  margin: calc(var(--section-padding) * -1);
+  margin-bottom: var(--section-padding);
+  padding: var(--section-padding);
+}
+
+.portfolio-entry .portfolio-entry__tech {
+  font-weight: bold;
+  margin-top: 1em !important;
+}
+
+.portfolio-entry .portfolio-entry__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+@media (max-width: 500px) {
+  .portfolio-entry .portfolio-entry__links {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
+  .portfolio-entry .portfolio-entry__links a {
+    margin-bottom: 1em;
+  }
+}
+
+.portfolio-entry:nth-of-type(4n+1) {
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.portfolio-entry:nth-of-type(4n+1) .col-l {
+  padding: var(--section-padding);
+  border-right: 8px solid black;
+}
+
+@media (max-width: 500px) {
+  .portfolio-entry:nth-of-type(4n+1) .col-l {
+    border-right: none;
+    padding-bottom: 0;
+  }
+}
+
+.portfolio-entry:nth-of-type(4n+1) .col-r {
+  padding: var(--section-padding);
+}
+
+@media (max-width: 500px) {
+  .portfolio-entry:nth-of-type(4n+1) .col-r {
+    border-right: none;
+    padding-top: 0;
+  }
+}
+
+.portfolio-entry:nth-of-type(4n+3) {
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+.portfolio-entry:nth-of-type(4n+3) .col-l {
+  padding: var(--section-padding);
+}
+
+@media (max-width: 500px) {
+  .portfolio-entry:nth-of-type(4n+3) .col-l {
+    padding-bottom: 0;
+  }
+}
+
+.portfolio-entry:nth-of-type(4n+3) .col-r {
+  padding: var(--section-padding);
+  border-right: 8px solid black;
+}
+
+@media (max-width: 500px) {
+  .portfolio-entry:nth-of-type(4n+3) .col-r {
+    border-right: none;
+    padding-top: 0;
+  }
+}
+
+@media (max-width: 500px) {
+  .portfolio-entry {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+  }
+}
+
+footer {
+  padding: 1rem var(--section-padding);
+  background-color: orange;
+  text-align: center;
+  border-top: 8px solid black;
+}
+
+footer h3 {
+  font-size: 1.5rem;
+}
+
+footer .footer-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+@media (max-width: 500px) {
+  footer .footer-links {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+footer ul {
+  list-style: none;
+  padding: 0;
+}
+
+footer .main-link {
+  font-size: 1.2rem;
+  margin-bottom: 1em;
+}
+
+footer .sub-link {
+  font-size: 1rem;
+}
+
+footer .sub-link:first-of-type {
+  margin-top: 0.5em;
 }
 /*# sourceMappingURL=main.css.map */
