--- a/main.scss
+++ b/main.scss
@@ -113,13 +113,18 @@ nav {
 		z-index: 1;
 		// Beefy font size
 		font-size: calc(var(--hero-height) * 0.5);
-		transition: transform 270ms ease-in;
-		transform: translateX(0%);
 		// Stagger slide-in of links
+		transition: transform 270ms ease-in,
+		 box-shadow 270ms ease-in;
+		transform: translateX(0%);
 		&:nth-of-type(1){transition-delay: 100ms};
 		&:nth-of-type(2){transition-delay: 200ms};
 		&:nth-of-type(3){transition-delay: 300ms};
+		// Box-shadow
+		box-shadow: 0px 0px yellow inset;
+		&:hover {box-shadow: -50vw 0px yellow inset;}
 	}
+
 	&.min {
 		// Push off side on minimized
 		transform: translateX(100%);
